--- a/Modern Bedroom With Baby Crib/model.uproject
+++ b/Modern Bedroom With Baby Crib/model.uproject
@@ -1,6 +1,12 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.5",
+	"EngineAssociation": "4.27",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Plugins": [
+		{
+			"Name": "ModelingToolsEditorMode",
+			"Enabled": true
+		}
+	]
 }
